# QMLWalkieTalkie

./: CMakeLists.txt  Main.qml  audiobackend.cpp  audiobackend.h  main.cpp  packetStructs.h  version.h.in
android/: AndroidManifest.xml  build.gradle
android/src/org/verya/QMLWalkieTalkie/: MainActivity.kt  NotificationHelper.kt  NotificationReceiver.kt  TestBridge.kt
components/: CBottomBar.qml  CButton.qml  CCard.qml  CTextField.qml  Toast.qml  WalkieHeader.qml
pages/: SettingsPage.qml
theme/: Theme.qml
